# coin-cli

./: Cargo.toml  LICENSE.txt  README.md
src/: crypto_price.rs  main.rs
