[package]
name = "cryptop"
version = "0.1.3"
edition = "2021"
authors = ["Kadin Sayani <kadinsayani8@gmail.com>"]
description = "Command Line Interface for getting cryptocurrency prices and information."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kadinsayani/cryptop"
repository = "https://github.com/kadinsayani/cryptop"
keywords = ["cli", "crypto"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1.2", features = ["derive"] }