[package]
name = "cryptop"
version = "0.1.8"
edition = "2023"
authors = ["Kadin Sayani <kadinsayani8@gmail.com>"]
description = "Command Line Interface for getting cryptocurrency prices and information."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kadinsayani/cryptop"
repository = "https://github.com/kadinsayani/cryptop"
keywords = ["cli", "crypto"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
